# pattern_with_orm-webhooks

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
data/: config.py
docker/: .env.example  bot.Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
docker/ngrok/: ngrok.yml
docker/scripts/: entrypoint.sh  uvicorn.sh
repository/: database.py  events.py  exaptions.py
repository/crud/: test_repo.py
src/: __main__.py  bot.py  logs.py  main.py  management.py  on_startup.py  polling_main.py  utils.py  webhook_main.py
src/api/: routs.py
src/api/endpoints/: webhooks.py
src/content/handlers/: basic_handlers.py  routs.py
src/content/handlers/basic/: handlers.py  kb.py
src/content/middlewares/: db_session.py  middleware.py
src/data/: config.py
src/repository/: database.py  events.py  exaptions.py  redis.py  utils.py
src/repository/crud/: base.py  users.py
src/repository/migrations/: env.py
src/repository/migrations/versions/: 0001_create_user_model.py  b09d9ae63508_test.py
src/repository/models/: test_model.py  user.py
