[tool.poetry]
name = "pattern-with-orm-webhooks"
version = "0.1.0"
description = ""
authors = ["Denis <drakonniravgol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiogram = "^3.10.0"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"
redis = "^5.0.7"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
